<resources>
    <string name="app_name">Animal Crossing Wiki</string>
    <string name="name_title">name</string>

    <string name="villager_image">Villager Image</string>
    <string name="species">Species:</string>
    <string name="personality">Personality:</string>
    <string name="saying">Saying:</string>
    <string name="villager_name">name</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="hobby">Hobby:</string>
    <string name="catch_phrase">Catch-phrase:</string>
    <string name="id">id</string>
    <string name="nook_phone"><u>Nook Phone</u></string>
    <string name="search_by_name">Search By Name</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="search">Search</string>

    <string name="buy_price">Buy price:</string>
    <string name="sell_price">Sell price:</string>

    <string name="art_name">Art name</string>
    <string name="art_description">Art Description</string>

    <string name="fossil_part_of">Part Of</string>
    <string name="fossil_name">Fossil Name</string>
    <string name="fossil_description">Fossil Description</string>
    <string name="fossil_part_of_description">Part of description</string>

    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="media_player">00:00 / 00:00</string>
</resources>