<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightGreen">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/burlywood">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightSand"
            android:padding="2dp">

            <ImageView
                android:id="@+id/song_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/villager_image"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/song_sell_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sell_price"
                app:layout_constraintStart_toStartOf="@+id/song_buy_price_title"
                app:layout_constraintTop_toBottomOf="@+id/song_buy_price_title" />

            <TextView
                android:id="@+id/song_sell_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_price"
                app:layout_constraintStart_toStartOf="@+id/song_buy_price"
                app:layout_constraintTop_toTopOf="@+id/song_sell_price_title" />

            <TextView
                android:id="@+id/song_buy_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buy_price"
                app:layout_constraintStart_toStartOf="@+id/song_title"
                app:layout_constraintTop_toBottomOf="@+id/song_title" />

            <TextView
                android:id="@+id/song_buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/buy_price"
                app:layout_constraintStart_toEndOf="@+id/song_buy_price_title"
                app:layout_constraintTop_toTopOf="@+id/song_buy_price_title" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/song_image" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/song_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="141dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>