<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".song.SongActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/song_detail_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/burlywood"
            app:strokeWidth="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightSand"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/song_detail_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/song_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/name_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/song_detail_image"
                    app:layout_constraintStart_toStartOf="@+id/song_detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_image" />

                <TextView
                    android:id="@+id/song_detail_sell_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sell_price"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/song_detail_name"
                    app:layout_constraintStart_toStartOf="@+id/song_detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_name" />

                <TextView
                    android:id="@+id/song_detail_sell_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sell_price"
                    app:layout_constraintEnd_toEndOf="@+id/song_detail_sell_price_title"
                    app:layout_constraintStart_toStartOf="@+id/song_detail_sell_price_title"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_sell_price_title" />

                <TextView
                    android:id="@+id/song_detail_buy_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/buy_price"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/song_detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_name" />

                <TextView
                    android:id="@+id/song_detail_buy_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/buy_price"
                    app:layout_constraintEnd_toEndOf="@+id/song_detail_buy_price_title"
                    app:layout_constraintStart_toStartOf="@+id/song_detail_buy_price_title"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_buy_price_title" />

                <TextView
                    android:id="@+id/song_orderable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Is Orderable"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/song_detail_sell_price" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/include_media_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/song_orderable">

                    <include layout="@layout/media_player"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/song_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_media_player" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
